--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "start": "nodemon src/server/index.js",
-    "dev": " webpack-dev-server --config webpack.dev.js --open",
+    "dev": "webpack-dev-server --config webpack.dev.js --open",
     "build": "webpack --config webpack.prod.js"
   },
   "keywords": [],
@@ -17,29 +17,32 @@
     "clean-webpack-plugin": "^4.0.0",
     "core-js": "^3.31.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.7",
     "express": "^4.18.2",
-    "nodemon": "^2.0.22",
-    "sass": "^1.82.0",
-    "valid-url": "^1.0.9",
-    "webpack": "^5.88.0",
-    "webpack-cli": "^5.1.4"
+    "nodemon": "^3.1.7",
+    "valid-url": "^1.0.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.5",
-    "@babel/preset-env": "^7.22.5",
-    "babel-loader": "^9.1.2",
-    "css-loader": "^6.8.1",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@rollup/plugin-node-resolve": "^15.3.0",
+    "babel-loader": "^9.2.1",
+    "css-loader": "^6.11.0",
     "css-minimizer-webpack-plugin": "^5.0.1",
     "html-webpack-plugin": "^5.5.3",
-    "jest": "^29.5.0",
+    "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.5.0",
     "mini-css-extract-plugin": "^2.7.6",
-    "sass-loader": "^13.3.2",
-    "style-loader": "^3.3.3",
-    "terser-webpack-plugin": "^5.3.9",
-    "webpack-dev-server": "^4.15.1",
+    "rollup": "^4.28.1",
+    "sass": "^1.82.0",
+    "sass-loader": "^13.3.3",
+    "style-loader": "^3.3.4",
+    "terser-webpack-plugin": "^5.3.10",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0",
     "webpack-merge": "^5.9.0",
     "workbox-webpack-plugin": "^7.3.0"
-  }
+  },
+  "browserslist": "> 0.2%, not dead"
 }
